# math-visualizer

./: CMakeLists.txt  algorithms.cpp  algorithms.h  matrix.h  point.h  screen.cpp  screen.h  widget.cpp  widget.h
